# PetriNetSolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  pn.xml  未命名绘图.drawio
include/: PetriNet.h  PetriNetError.h  ReachGraph.h  XmlParse.h
src/: PetriNet.cpp  PetriNetError.cpp  ReachGraph.cpp  XmlParse.cpp  main.cpp
